[package]
name = "cart"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
enum-iterator = "0.7.0"
enum_dispatch = "0.3.7"
nonmax = "0.5.0"
num-complex = "0.4.0"
ufmt = "0.1.0"
variant_count = "1.1.0"
wee_alloc = { version = "0.4.5" }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
